--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,108 @@
-<p>login works!</p>
+<section class="login-form"></section>
+<form
+  fxLayout="column"
+  fxLayoutAlign="center center"
+  fxLayoutGap="20px"
+  [formGroup]="loginForm"
+  (ngSubmit)="onSubmit()"
+>
+  <mat-form-field>
+    <input
+      matInput
+      type="email"
+      placeholder="Your email"
+      formControlName="email"
+    />
+    <mat-error>Please enter a valid email</mat-error>
+    <mat-hint>Please enter your email</mat-hint>
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput type="password" formControlName="password" #pwInput />
+
+    <mat-error>Passwords must be at least 6 characters</mat-error>
+    <mat-hint align="end" suffix> {{ pwInput?.value?.length }}/6</mat-hint>
+    <mat-hint>Please enter your password</mat-hint>
+  </mat-form-field>
+
+  <button
+    type="submit"
+    mat-raised-button
+    color="primary"
+    [disabled]="loginForm.pristine"
+  >
+    Submit
+  </button>
+</form>
+
+<!--
+
+<section class="signup-form">
+  <form
+    fxLayout="column"
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    fxLayoutGap="20px"
+    #f="ngForm"
+    (ngSubmit)="onSubmit(f)"
+  >
+    <mat-form-field>
+      <input
+        type="email"
+        matInput
+        placeholder="Your E-mail"
+        ngModel
+        name="email"
+        email
+        required
+        #emailInput="ngModel"
+      />
+      <mat-error *ngIf="emailInput?.value?.length === 0"
+        >Field must not be empty</mat-error
+      >
+      <mat-error *ngIf="emailInput?.value?.length !== 0"
+        >Email is not valid</mat-error
+      >
+    </mat-form-field>
+    <mat-form-field hintLabel="Should be at least 6 characters long">
+      <input
+        type="password"
+        matInput
+        placeholder="Your Password"
+        ngModel
+        name="password"
+        required
+        minlength="6"
+        #pwInput
+      />
+      <mat-hint align="end">{{ pwInput?.value.length }}</mat-hint>
+    </mat-form-field>
+
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="Your Birth Date"
+        [matDatepicker]="myDatepicker"
+        [max]="maxDate"
+      />
+      <mat-datepicker-toggle
+        matSuffix
+        [for]="myDatepicker"
+      ></mat-datepicker-toggle>
+      <mat-datepicker #myDatepicker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-checkbox color="primary" ngModel name="agree" required
+      >I have read the terms and conditions</mat-checkbox
+    >
+
+    <button
+      type="submit"
+      mat-raised-button
+      color="primary"
+      [disabled]="!f.valid"
+    >
+      Submit
+    </button>
+  </form>
+</section> -->
