--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -9,4 +9,7 @@
   </mat-tab>
 </mat-tab-group>
 
-<app-current-training *ngIf="onGoingTraining"></app-current-training>
+<app-current-training
+  *ngIf="onGoingTraining"
+  (trainingExit)="onGoingTraining = false"
+></app-current-training>
