--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,18 +1,33 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/signup" (click)="onSidenavClick()">
+  <a
+    mat-list-item
+    routerLink="/signup"
+    (click)="onSidenavClick()"
+    *ngIf="!isAuth"
+  >
     <mat-icon>face</mat-icon>
     <span class="nav-caption">Signup</span>
   </a>
-  <a mat-list-item routerLink="/login" (click)="onSidenavClick()">
+  <a
+    mat-list-item
+    routerLink="/login"
+    (click)="onSidenavClick()"
+    *ngIf="!isAuth"
+  >
     <mat-icon>input</mat-icon>
     <span class="nav-caption">Login</span>
   </a>
-  <a mat-list-item routerLink="/training" (click)="onSidenavClick()">
+  <a
+    mat-list-item
+    routerLink="/training"
+    (click)="onSidenavClick()"
+    *ngIf="isAuth"
+  >
     <mat-icon>fitness_center</mat-icon>
     <span class="nav-caption">Training</span>
   </a>
-  <mat-list-item>
-    <button mat-icon-button (click)="onSidenavClick()">
+  <mat-list-item *ngIf="isAuth" (click)="onLogout()">
+    <button mat-icon-button>
       <mat-icon>eject</mat-icon>
       <span class="nav-caption">Logout</span>
     </button>
