--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -3,7 +3,9 @@
     mode="determinate"
     [value]="progress"
   ></mat-progress-spinner>
-  <h1>{{ progress }}</h1>
+  <h2>{{ activeTraining.name }}</h2>
+  <h3>{{ progress }}</h3>
+
   <p>Keep on going you can do it</p>
   <button mat-raised-button color="accent" (click)="onStop()">Stop</button>
 </section>
