--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,29 +1,26 @@
 <section class="new-training" fxLayout="column" fxLayoutAlign="center center">
-  <mat-card fxFlex="400px" fxFlex.xs="100%">
-    <mat-card-title fxLayoutAlign="center"> Time to work out!</mat-card-title>
-    <mat-card-content fxLayoutAlign="center">
-      <mat-form-field>
-        <mat-label>Available excercises</mat-label>
-        <mat-select>
-          <mat-option value="crunches">
-            crunches
-          </mat-option>
-          <mat-option value="touch toes">
-            touch toes
-          </mat-option>
-          <mat-option value="side lunges">
-            side lunges
-          </mat-option>
-          <mat-option value="burpees">
-            burpees
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </mat-card-content>
-    <mat-card-actions fxLayoutAlign="center">
-      <button mat-button type="submit" (click)="onStartTraining()">
-        Start
-      </button>
-    </mat-card-actions>
-  </mat-card>
+  <form (ngSubmit)="onStartTraining(f)" #f="ngForm">
+    <mat-card fxFlex="400px" fxFlex.xs="100%">
+      <mat-card-title fxLayoutAlign="center"> Time to work out!</mat-card-title>
+      <mat-card-content fxLayoutAlign="center">
+        <mat-form-field>
+          <mat-label>Available excercises</mat-label>
+          <mat-select ngModel name="exercise" required>
+            <mat-option> -- Choose Exercise -- </mat-option>
+            <mat-option
+              *ngFor="let exercise of exercises"
+              value="{{ exercise.id }}"
+            >
+              {{ exercise.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions fxLayoutAlign="center">
+        <button mat-button type="submit" [disabled]="!f.form.valid">
+          Start
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </form>
 </section>
