--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,8 +1,8 @@
 <mat-tab-group *ngIf="!onGoingTraining">
-  <mat-tab label="First">
+  <mat-tab label="New Exercise">
     <app-new-training></app-new-training>
   </mat-tab>
-  <mat-tab label="Second">
+  <mat-tab label="Past Exercises">
     <app-past-trainings></app-past-trainings>
   </mat-tab>
 </mat-tab-group>
