--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -1,37 +1,52 @@
-<mat-table [dataSource]="dataSource" matSort>
-  <ng-container matColumnDef="date">
-    <mat-header-cell mat-sort-header *matHeaderCellDef>Date</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{ element.date | date }}</mat-cell>
-  </ng-container>
+<div fxLayout="column">
+  <div fxLayoutAlign="center center" fxFlex="40%">
+    <mat-form-field>
+      <input
+        matInput
+        type="text"
+        (keyup)="doFilter($event.target.value)"
+        placeholder="Filter"
+      />
+    </mat-form-field>
+  </div>
+  <mat-table [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="date">
+      <mat-header-cell mat-sort-header *matHeaderCellDef>Date</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{ element.date | date }}</mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="name">
-    <mat-header-cell mat-sort-header *matHeaderCellDef>Name</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="name">
+      <mat-header-cell mat-sort-header *matHeaderCellDef>Name</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="calories">
-    <mat-header-cell mat-sort-header *matHeaderCellDef
-      >Calories</mat-header-cell
-    >
-    <mat-cell *matCellDef="let element">{{
-      element.calories | number
-    }}</mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="calories">
+      <mat-header-cell mat-sort-header *matHeaderCellDef
+        >Calories</mat-header-cell
+      >
+      <mat-cell *matCellDef="let element">{{
+        element.calories | number
+      }}</mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="duration">
-    <mat-header-cell mat-sort-header *matHeaderCellDef
-      >Duration</mat-header-cell
-    >
-    <mat-cell *matCellDef="let element">{{
-      element.duration | number
-    }}</mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="duration">
+      <mat-header-cell mat-sort-header *matHeaderCellDef
+        >Duration</mat-header-cell
+      >
+      <mat-cell *matCellDef="let element">{{
+        element.duration | number
+      }}</mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="state">
-    <mat-header-cell *matHeaderCellDef>State</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{ element.state }}</mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="state">
+      <mat-header-cell *matHeaderCellDef>State</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{ element.state }}</mat-cell>
+    </ng-container>
 
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-</mat-table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+  </mat-table>
+
+  <mat-paginator #paginator [pageSize]="1" [pageSizeOptions]="[5, 10, 25, 100]">
+  </mat-paginator>
+</div>
