--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -12,7 +12,9 @@
   <mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="date">
       <mat-header-cell mat-sort-header *matHeaderCellDef>Date</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{ element.date | date }}</mat-cell>
+      <mat-cell *matCellDef="let element">{{
+        element.date.toDate() | date
+      }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
@@ -47,6 +49,6 @@
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
 
-  <mat-paginator #paginator [pageSize]="1" [pageSizeOptions]="[5, 10, 25, 100]">
+  <mat-paginator #paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]">
   </mat-paginator>
 </div>
